fix background overlay spacing issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,6 +180,8 @@ h3 {
   height: 100vh;
   justify-content: center;
   position: fixed;
+  right: 0;
+  top: 0;
   width: 100vw;
   z-index: 9999;
 }
